@@ -7,7 +7,6 @@ import (
 )
 
 type config struct {
-	Index         string `config:"index"`
 	Path          string `config:"path"`
 	Filename      string `config:"filename"`
 	RotateEveryKb int    `config:"rotate_every_kb" validate:"min=1"`
@@ -22,10 +21,6 @@ var (
 )
 
 func (c *config) Validate() error {
-	if c.Filename == "" && c.Index == "" {
-		return fmt.Errorf("File logging requires filename or index being set.")
-	}
-
 	if c.NumberOfFiles < 2 || c.NumberOfFiles > logp.RotatorMaxFiles {
 		return fmt.Errorf("The number_of_files to keep should be between 2 and %v",
 			logp.RotatorMaxFiles)
